# file-hasher

./: .gitignore  .gitmodules  Cargo.toml  README.md  package-lock.json
contract/broadcast/FileHasherCommitmentDeploy.s.sol/5/: run-1667728707.json  run-1667728721.json  run-1668861426.json  run-1668861433.json  run-1668861466.json  run-latest.json
contract/script/: FileHasherCommitmentDeploy.s.sol
contract/src/: FileHasherCommitment.sol
contract/test/: FileHasherCommitment.t.sol
src/: wasm.rs
src/circuits/: file_hasher.rs  mod.rs  poseidon.rs
src/utils/: poseidon.rs
test-client/: package-lock.json  package.json
test-client/public/pkg/: file_hasher.d.ts  file_hasher.js  file_hasher_bg.wasm  file_hasher_bg.wasm.d.ts
test-client/src/: App.tsx  file-hasher-worker.ts
ui/: .env.example  index.tsx  package.json  tsconfig.json
ui/api/: utils.ts
ui/artifacts/contracts/FileHash.sol/: FileHash.json
ui/components/: FileUpload.tsx  Label.tsx  Navbar.tsx
ui/components/tables/: FlexibleFormTable.tsx
ui/config/: env.js
ui/helper/: export.ts
ui/libs/file-hasher/: file_hasher.js  package.json
ui/pages/: _app.tsx  _document.tsx  index.tsx
ui/public/pkg/: file_hasher.js  file_hasher_bg.wasm
ui/src/: App.tsx  MainPage.tsx  app-config.ts  file-hasher-worker.ts  file-hasher.worker.ts
ui/src/components/: FileUpload.tsx  VerifyPage.tsx  WarningNoWallet.tsx
ui/src/components/containers/: BaseContainer.tsx
ui/src/file-hasher/: FileHasherWorkerContext.tsx
ui/src/helper/: export.ts
ui/styles/: theme.tsx
www/: index.js  package-lock.json  package.json
(+7 files in other folders)
